# NppTidy2

./: .gitignore  .gitmodules  CMakeLists.txt  README.tidy.md  Tidy2.sln  appveyor.yml  readme.md
CMakeModules/: FindTidy.cmake
Tidy2/: AboutDialog.cpp  AboutDialog.h  PluginDetails.h  PluginMain.cpp  PluginMain.h  ReadMe.txt  Tidy2.vcxproj  Tidy2.vcxproj.filters  VersionAndAbout.rc  dllmain.cpp  environment.props  resource.h  stdafx.cpp  stdafx.h
Tidy2/NppInterface/: StaticDialog.cpp  StaticDialog.h
build.x64/: .gitignore  build-me.bat
config/: tidy1.cfg  tidy2.cfg  tidy3.cfg
